--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/aos": "^3.0.4",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
@@ -27,7 +28,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
